--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xmas-lst",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A Vue.js project",
   "author": "Jerome Chery <jerome.chery@nrco.fr>",
   "private": true,
@@ -30,6 +30,7 @@
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
+    "firestore-export-import": "^0.1.6",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
