--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "firebase": "^5.5.8",
     "vue": "^2.5.2",
+    "vue-context-menu": "^2.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
