--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xmas-lst",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A Vue.js project",
   "author": "Jerome Chery <jerome.chery@nrco.fr>",
   "private": true,
@@ -34,6 +34,7 @@
     "firestore-export-import": "^0.1.6",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "left-pad": "^1.3.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
