--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^5.5.8",
     "vue": "^2.5.2",
     "vue-context-menu": "^2.0.6",
+    "vue-draggable-resizable": "git+https://github.com/jeryckho/vue-draggable-resizable.git",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
