--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^5.5.8",
+    "sweet-modal-vue": "^2.0.0",
     "vue": "^2.5.2",
     "vue-context-menu": "^2.0.6",
     "vue-draggable-resizable": "git+https://github.com/jeryckho/vue-draggable-resizable.git",
@@ -37,6 +38,7 @@
     "html-webpack-plugin": "^2.30.1",
     "left-pad": "^1.3.0",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -44,6 +46,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
